--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </style>
   </head>
   <body class="bg-sky-50 text-gray-800 p-6">
-    <h1 class="text-4xl font-bold text-sky-600 mb-4">Leo Messi - Tailwind Demo</h1>
+    <h1 class="text-4xl font-bold text-sky-600 mb-4">Leo Messi GOATTT!!!!!!!!!!!!!!</h1>
 
-    <p class="text-red-500 mb-2">Pierwszy kolor tekstu: Messi urodził się w Rosario, Argentyna.</p>
-    <p class="text-green-500 mb-2">Drugi kolor tekstu: Jako 13-latek dołączył do FC Barcelony.</p>
-    <p class="text-blue-500 mb-2">Trzeci kolor tekstu: W 2022 roku zdobył Mistrzostwo Świata z Argentyną.</p>
+    <p class="text-red-500 mb-2">Messi urodził się w Rosario, Argentyna.</p>
+    <p class="text-green-500 mb-2">Jako 13-latek dołączył do FC Barcelony.</p>
+    <p class="text-blue-500 mb-2">W 2022 roku zdobył Mistrzostwo Świata z Argentyną.</p>
 
-    <a href="#" class="text-pink-600 underline">Więcej o Messim</a><br/>
-    <a href="#" class="text-yellow-600 underline">Zobacz statystyki</a>
+    <a href="#" class="text-pink-600 underline">kocham messiego</a><br/>
+    <a href="#" class="text-yellow-600 underline">statystyki!!!!!!!!!!!!!!!!!!!!!!!</a>
 
     <div class="mt-6">
       <div class="bg-sky-100 p-4 shadow-md mb-4">Messi zdobył 7 Złotych Piłek, co czyni go rekordzistą w tej kategorii.</div>
@@ -30,7 +30,7 @@
 
     <div class="mt-6">
       <span class="h-4 w-4 bg-red-500 rounded-full animate-ping inline-block"></span>
-      <span class="ml-2">Messi ping!</span>
+      <span class="ml-2">Messi GOOOOOOOOOOOOOOOOOOOOOOOLLLLLLLL!!!!!!!!!!!!!!</span>
     </div>
 
     <div class="mt-6">
